--- a/notebooks/Mapa+GOTA.ipynb
+++ b/notebooks/Mapa+GOTA.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejemplo de uso de datos abiertos del portal Open Data Canarias."
+    "### Ejemplo de uso de datos abiertos del portal Taro Open Data."
    ]
   },
   {
